Simon Almero - Administrators(Checking)

--- a/admin/AdminLTE-3.2.0/pages/tables/simple.html
+++ b/admin/AdminLTE-3.2.0/pages/tables/simple.html
@@ -1126,6 +1126,7 @@
           </div>
           <!-- /.col -->
         </div>
+        <!--HERE---------------------------------------------------------------------------------------------->
         <!-- /.row -->
         <div class="row">
           <div class="col-12">
@@ -1194,6 +1195,7 @@
             <!-- /.card -->
           </div>
         </div>
+        <!--HERE---------------------------------------------------------------------------------------------->
         <!-- /.row -->
         <div class="row">
           <div class="col-12">
