--- a/admin/AdminLTE-3.2.0/pages/tables/jsgrid.html
+++ b/admin/AdminLTE-3.2.0/pages/tables/jsgrid.html
@@ -837,12 +837,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>jsGrid</h1>
+            <h1>List of Admins</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">jsGrid</li>
+              <li class="breadcrumb-item active">List of Admins</li>
             </ol>
           </div>
         </div>
@@ -853,7 +853,7 @@
     <section class="content">
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">jsGrid</h3>
+          <h3 class="card-title">List of Admins</h3>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
